# semi-utils-gui

./: .gitignore  README.en.md  README.md  build_win_pkg.spec  config.yaml  install.ps1  install.sh  main.py  main.spec  pyproject.toml  translations.py  utils.py
.github/workflows/: build.yml  build_mac_pkg.yml  build_win_pkg.yml  main.yml  release.yml
entity/: config.py  image_container.py
qml/: main.qml
specs/: build_mac_pkg.spec  build_win_pkg.spec  main.spec
src/: gui.py  init.py
src/entity/: config.py  image_container.py  image_processor.py
src/layout/: main.qml
src/ui/: backend.py  constants.py  workers.py
src/utils/: __init__.py  data.py  exif.py  file.py  image.py
