[project]
name = "semi-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=11.0.0",        
    "python-dateutil~=2.9.0", 
    "pyyaml>=6.0.2",    
    "requests~=2.32.0",  
    "tqdm~=4.66.0",     
    "pyside6>=6.8.0", 
]
