[project]
name = "semi-utils-gui"
version = "1.0.0"
description = "Add watermarker for your photos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=11.0.0",
    "python-dateutil~=2.9.0",
    "pyyaml>=6.0.2",
    "requests~=2.32.0",
    "tqdm~=4.67.1",
    "pyside6>=6.8.0",
    "exifread>=3.5.1",
]
